# crawl4ai-mcp-server

./: .coverage  .coverage.Mac.50294.XrMZDxox  .coverage.Mac.64538.XnJXxVux  .env.example  .gitignore  ARCHITECTURE_AUDIT_2024.md  ARCHITECTURE_REFACTORING_REQUIREMENTS.md  CHANGELOG.md  CHUNKING_IMPROVEMENTS.md  CLAUDE.md  INITIAL.md  MCP_INSPECTOR_SETUP.md  RAG_GUIDE.md  README.md  SERVICE_DEPENDENCY_ANALYSIS.md  TESTING_ROADMAP.md  api.http  benchmark_results.json  coverage.xml  dev-env.sh  fileCollection-analyse.md  http_server.py  http_server_old.py  mcp-inspector-config.json  performance_benchmark_results.json  pyproject.toml  run_benchmarks.py  server.py  server_old.py  setup_ci_mocks.py  start_server.sh  test_ab_demo.py  test_collections_direct.py  test_e2e_rag.py  test_edge_cases.py  test_integration.py  test_markdown_simple.py  test_mcp_collections.py  test_mcp_create_collection.py  test_mcp_tool_call.py  (+5 more)
${CONTEXT42_HOME}/databases/: vector_sync.db
.claude/: settings-hooks-example.json
.claude/agents/: frontend-issue-detective.md  frontend-specialist.md  frontend-tester.md
.planning/: EXPLORE_DEEP_CRAWL.md  EXPLORE_FILEMANAGEMENT.md  EXPLORE_FRONTEND.md  EXPLORE_MVP.md  EXPLORE_RAG.md  EXPLORE_SECURITY_TESTS_OPTIMIZATION.md  INITIAL_ARCHITECTURE_REFACTORING_REQUIREMENTS.md  INITIAL_DEEP_CRAWL.md  INITIAL_FRONTEND.md  INITIAL_FRONTEND_REFACTORING.md  INITIAL_RAG.md  INITIAL_chunking_optimization.md  INITIAL_rag_chunking_abtest.md  MIGRATION_SUMMARY.md  PLAN_FILE_COLLECTION_VECTOR_SYNC.md  PLAN_FRONTEND_REFACTORING.md  PLAN_RAG_QUERY.md  PLAN_api_mcp_refactoring.md  PLAN_chunking_optimization.md  PLAN_frontend-redesign.md  PLAN_frontend_anpassung.md  PLAN_graph-database.md  PLAN_hybrid_collection_storage.md  PLAN_query_verbesserung.md  PLAN_rag_chunking_abtest.md  PLAN_refactoring.md  PLAN_sqlite-migration.md  PLAN_unified-server-architecture.md  PROGRESS_DEEP_CRAWL.md  PROGRESS_FILEMANAGEMENT.md  PROGRESS_FILE_COLLECTION_VECTOR_SYNC.md  PROGRESS_FRONTEND.md  PROGRESS_FRONTEND_REFACTORING.md  PROGRESS_MVP.md  PROGRESS_RAG_QUERY.md  PROGRESS_SECURITY_TESTS_OPTIMIZATION.md  PROGRESS_api_mcp_refactoring.md  PROGRESS_chunking_optimization.md  PROGRESS_configurable_collection_storage.md  PROGRESS_consolidate-testing-knowledge.md  (+27 more)
application_layer/: __init__.py  collection_management.py  crawl_integration.py  file_management.py  rag_query.py  vector_search.py  web_crawling.py
config/: __init__.py  paths.py
crawl4ai/: __init__.py  deep_crawling.py
crawl4ai_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MAINTENANCE.md
frontend/: BulkSaveModal-Test-Report.md  COLLECTION_FEATURE_SUMMARY.md  ICON_SIZING_STANDARDS.md  TESTING_REPORT.md  eslint.config.js  github-issue-magnifying-glass.md  icon-fix-summary.md  layout-preview-simple.html  new-layout-preview.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
notebooks/: 01_simple_embedding_test.ipynb  02_model_comparison.ipynb  03_realistic_chunking_comparison.ipynb  04_graph_database_demo.ipynb  04_real_graph_database_demo.ipynb
scripts/: run_ci_tests.sh
services/: __init__.py  collection_service.py  containers.py  interfaces.py  llm_service.py  query_expansion_service.py  vector_sync_service.py  web_crawling_service.py
tests/: .claude.md  conftest.py  factories.py  rag_factories.py  test_api_integration.py  test_cicd_configuration.py  test_collection_cascade_deletion.py  test_collection_management_use_cases.py  test_collection_manager.py  test_collection_security_e2e.py  test_collection_service_integration.py  test_complete_integration.py  test_crawl_integration_use_cases.py  test_database_foundation.py  test_domain_crawler_core.py  test_domain_crawler_factory.py  test_domain_crawler_parameters.py  test_domain_link_preview_core.py  test_dynamic_context_expander_integration.py  test_dynamic_context_expansion.py  test_e2e_optimized.py  test_e2e_workflow.py  test_end_to_end_vector_sync.py  test_end_to_end_vector_sync.py.disabled  test_enhanced_chromadb_integration.py  test_enhanced_content_processor.py  test_enhanced_vector_search.py  test_error_sanitization.py  test_file_listing.py  test_file_listing_simple.py  test_file_management_use_cases.py  test_filesystem_collection_manager.py  test_filesystem_collection_manager.py.backup  test_filesystem_metadata_reconciler.py  test_filesystem_metadata_store.py  test_force_resync_api.py  test_framework_setup.py  test_full_system_integration.py  test_integration_comprehensive.py  test_integration_comprehensive.py.disabled  (+43 more)
tools/: __init__.py  collection_manager.py  database.py  domain_crawler.py  domain_link_preview.py  error_sanitizer.py  filesystem_collection_manager.py  filesystem_metadata_reconciler.py  filesystem_metadata_store.py  mcp_domain_tools.py  performance_benchmark.py  sqlite_collection_manager.py  storage_manager_factory.py  vector_sync_api.py  web_extract.py
(+239 files in other folders)
