[project]
name = "crawl4ai-mcp-server"
version = "0.1.0"
description = "MCP server with crawl4ai integration for web content extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "crawl4ai[all]",
    "python-dotenv",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "tomli",
]
dev = [
    "mypy",
    "ruff",
    "bandit",
    "safety",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    ".planning/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[dependency-groups]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "tomli>=2.2.1",
]
