[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawl4ai-mcp-server"
version = "0.1.0"
description = "MCP server with crawl4ai integration for web content extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "crawl4ai[all]>=0.7.0",
    "python-dotenv",
    "pydantic>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
    "langchain-text-splitters>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "tests*"]
exclude = ["main", "server", "test_mcp_tool_call"]

[tool.setuptools]
py-modules = ["server"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "tomli",
]
dev = [
    "mypy",
    "ruff",
    "bandit",
    "safety",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: marks tests as security-related",
    "regression: marks tests as critical regression tests",
]
timeout = 300
addopts = [
    "--strict-markers",
    "--maxfail=3",
    "--tb=short",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    ".planning/*",
    "main.py",
    "setup.py",
]

[tool.coverage.report]
fail_under = 10
show_missing = true

[dependency-groups]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.4.0",
    "tomli>=2.2.1",
]
