[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawl4ai-mcp-server"
version = "0.1.0"
description = "MCP server with crawl4ai integration for web content extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "crawl4ai[all]>=0.7.0",
    "python-dotenv",
    "pydantic>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
    "langchain-text-splitters>=0.2.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pytest>=8.4.1",
    "markdown2>=2.5.4",
    "tomli>=2.2.1",
    "pytest-asyncio>=1.0.0",
    "requests>=2.32.4",
    "langchain>=0.3.27",
    "dependency-injector>=4.48.1",
    "pytest-cov>=6.2.1",
    "openai>=1.0.0",
    "ollama>=0.3.0",
    "httpx>=0.28.0",
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "spacy>=3.8.7",
    "neo4j>=5.28.2",
    "networkx>=3.4.2",
    "plotly>=6.3.0",
    "numpy>=2.2.6",
    "nbformat>=5.10.4",
    "jupyter>=1.1.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "tests*"]
exclude = ["main", "server", "test_mcp_tool_call"]

[tool.setuptools]
py-modules = ["server"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "tomli",
    "dependency-injector>=4.48.1",
]
dev = [
    "mypy",
    "ruff",
    "bandit",
    "safety",
    "dependency-injector>=4.48.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: marks tests as security-related",
    "regression: marks tests as critical regression tests",
    "asyncio: marks tests as asyncio tests",
]
addopts = [
    "--strict-markers",
    "--maxfail=3",
    "--tb=short",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    ".planning/*",
    "main.py",
    "setup.py",
]

[tool.coverage.report]
fail_under = 10
show_missing = true

[dependency-groups]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.4.0",
    "tomli>=2.2.1",
    "dependency-injector>=4.48.1",
]
